@@ -5,6 +5,7 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  resolved issues
  * #4677: Admin based chaining HtDigestStore & HtPasswdStore breaks config
    by adding dedicated options 'htdigest_file' and 'htpasswd_file'
+ * #8685: User deletion ordering breaks 'deleted' notification for SessionStore
  * #8791: Obsolete patch needed for authentication against Jira
    by adding sha256/sha512 hash support (needs `passlib` or extended `crypt`)
  * #8990: HtPasswdStore and SessionStore with HtPasswdHashMethod share option
